gccida/g3/remove_edge
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/remove_edge/src/cfg.c:871:12: error: expected expression
*( _OWORD *)&e->pred_next = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/remove_edge/src/cfg.c:871:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&e->pred_next = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/remove_edge/src/cfg.c:873:12: error: expected expression
*( _OWORD *)&e->src = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/remove_edge/src/cfg.c:873:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&e->src = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/remove_edge/src/cfg.c:876:12: error: expected expression
*( _OWORD *)&e->insns = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/remove_edge/src/cfg.c:876:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&e->insns = 0LL; 
   ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/remove_edge/src/cfg.c:877:12: error: expected expression
*( _OWORD *)&e->flags = 0LL; 
           ^
/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/remove_edge/src/cfg.c:877:4: error: use of undeclared identifier '_OWORD'
*( _OWORD *)&e->flags = 0LL; 
   ^
8 errors generated.
make: *** [/data/output_dir/patch/gcc/ida/gcc/O3/gcc-gcc-O3/remove_edge/src/obj/cfg.o] Error 1
